style(App.css): add 100vw width to body element to prevent horizontal scrolling

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -81,4 +81,5 @@ body {
 body {
     background-image: url('../src/assets/bg-diary.jpg');
     overflow-x: hidden;
+    width: 100vw;
 }
